; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/nimble/esp-hci/src/extr_esp_nimble_hci.c_ble_hci_trans_buf_free.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/nimble/esp-hci/src/extr_esp_nimble_hci.c_ble_hci_trans_buf_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ble_hci_evt_hi_pool = common dso_local global i32 0, align 4
@ble_hci_evt_lo_pool = common dso_local global i32 0, align 4
@ble_hci_cmd_pool = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ble_hci_trans_buf_free(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @os_memblock_from(i32* @ble_hci_evt_hi_pool, i32* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @os_memblock_put(i32* @ble_hci_evt_hi_pool, i32* %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = icmp eq i32 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  br label %36

14:                                               ; preds = %1
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @os_memblock_from(i32* @ble_hci_evt_lo_pool, i32* %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %14
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @os_memblock_put(i32* @ble_hci_evt_lo_pool, i32* %19)
  store i32 %20, i32* %3, align 4
  %21 = load i32, i32* %3, align 4
  %22 = icmp eq i32 %21, 0
  %23 = zext i1 %22 to i32
  %24 = call i32 @assert(i32 %23)
  br label %35

25:                                               ; preds = %14
  %26 = load i32*, i32** %2, align 8
  %27 = call i32 @os_memblock_from(i32* @ble_hci_cmd_pool, i32* %26)
  %28 = call i32 @assert(i32 %27)
  %29 = load i32*, i32** %2, align 8
  %30 = call i32 @os_memblock_put(i32* @ble_hci_cmd_pool, i32* %29)
  store i32 %30, i32* %3, align 4
  %31 = load i32, i32* %3, align 4
  %32 = icmp eq i32 %31, 0
  %33 = zext i1 %32 to i32
  %34 = call i32 @assert(i32 %33)
  br label %35

35:                                               ; preds = %25, %18
  br label %36

36:                                               ; preds = %35, %7
  ret void
}

declare dso_local i32 @os_memblock_from(i32*, i32*) #1

declare dso_local i32 @os_memblock_put(i32*, i32*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
